Fixing Big User Icon Responsive
Reduce size so that the image wont overlap on screens medium to large screen

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -38,7 +38,7 @@ input[type=radio] {
     margin-top: -42px;
     height: 50px;
     width: 50px;
-    margin-left: 150px;
+    margin-left: 95px;
 }
 
 
